--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins Here
+
+.button(@button-color, @font-color) {
+    background-color: @button-color;
+    border: 1px solid @button-color;
+    text-align: center;
+    border-radius: 1rem;
+    padding: 1rem;
+    color: @font-color;
+    font-size: 2rem;
+}
