--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation code here
+
+header {
+    display: flex;
+    flex-direction: column;
+    background-color: @nav-bg;
+
+    h1 {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 1rem 0;
+        font-size: 4rem;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-evenly;
+        
+
+        a {
+            text-decoration: none;
+            color: @nav-font;
+            font-size: 1.6rem;
+            padding: 1rem 0;
+        }
+    }
+}
