--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,7 @@
 // Navigation code here
 
 header {
-    display: flex;
-    flex-direction: column;
+    .flex-column();
     background-color: @nav-bg;
 
     h1 {
