--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@phone @max-width: 500px);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -218,6 +217,16 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    display: none;
+  }
+  .home .space-images img:first-child {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -234,11 +243,24 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 5rem 0;
+    margin-top: 0;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+  padding: 1rem 0;
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
@@ -253,6 +275,12 @@ footer {
   font-size: 2rem;
   width: fit-content;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 2rem 0;
+  }
+}
 .home .walk .walk-text .btn:hover {
   background-color: #F6F7F8;
   color: #22283A;
@@ -260,6 +288,12 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
