--- a/less/home-page.less
+++ b/less/home-page.less
@@ -26,10 +26,18 @@
     width: 100%;
 
     img {
-      width: 28%;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
+      .images();
+      
+      @media @phone {
+        display: none;
+
+        &:first-child {
+          display: block;
+          width: 100%;
+          height: auto;
+        }
+      }
+      
     }
   }
 
@@ -52,11 +60,23 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      padding: 5rem 0;
+      margin-top: 0;
+
+    }
+
     .walk-text {
       width: 50%;
 
+      @media @phone {
+        width: 100%;
+      }
+
       h3 {
         margin-bottom: 10px;
+        padding: 1rem 0;
       }
 
       p {
@@ -66,6 +86,11 @@
       .btn {
         .button(@btn-bg-color, @porcelain);
         width: fit-content;
+
+        @media @phone {
+          width: 100%;
+          padding: 2rem 0;
+        }
 
         &:hover {
           background-color: @porcelain;
@@ -77,6 +102,11 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-left: 0;
+      }
       
       img {
         width: 100%;
