--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,3 +9,15 @@
     color: @font-color;
     font-size: 2rem;
 }
+
+.flex-column() {
+    display: flex;
+    flex-direction: column;
+}
+
+.images() {
+    width: 28%;
+    margin: 20px 2.5%;
+    border-radius: 20px;
+    height: 100%;
+}
